# student_homework

./: .gitignore  CMakeLists.txt  README.md
chenlaoshi/: main.cpp
chenlaoshi/include/: main.hpp
chenlaoshi/src/: main.cpp
include/: lv_drv_conf.h  lv_ex_conf.h  motor.hpp  publicAPI.hpp
include/lv_examples/lv_apps/benchmark/: benchmark.c
save/: save.txt
userSrc/PC/src/: main.cpp  motor.cpp
userSrc/bird/src/: main.cpp
userSrc/bobo/include/: motor.hpp
userSrc/bobo/src/: main.cpp  motor.cpp
userSrc/chenlaoshi/include/: aaa.hpp  main.hpp  singletonTest1.hpp  singletonTest2.hpp  singletonTest3.hpp  userAPI.hpp
userSrc/chenlaoshi/src/: main.cpp  userAPI.cpp
userSrc/chicken/include/: main.hpp  motor.hpp  userAPI.hpp
userSrc/chicken/src/: main.cpp  motor.cpp
userSrc/cow/src/: main.cpp
userSrc/fish/src/: main.cpp
userSrc/glass/include/: motor.hpp
userSrc/glass/src/: main.cpp  motor.cpp
userSrc/guaji/include/: Motor.hpp
userSrc/guaji/src/: Motor.cpp  main.cpp
userSrc/luyiren/src/: main.cpp
userSrc/mars/guaji/src/: main.cpp
userSrc/mars/src/: main.cpp
userSrc/mouse/include/: motor.hpp  mouse.hpp
userSrc/mouse/src/: main.cpp  motor.cpp
userSrc/paopao/src/: main.cpp
userSrc/parrot/include/: motor.hpp
userSrc/parrot/src/: main.cpp  motor.cpp
userSrc/pig/: main.cpp
userSrc/qianruiyuan/src/: main.cpp
userSrc/rabbit/src/: main.cpp
userSrc/sheep/include/: main.hpp  userAPI.hpp
userSrc/sheep/src/: main.cpp  userAPI.cpp
userSrc/shizhenghe/src/: main.cpp
userSrc/tree/include/: Motor.hpp
userSrc/tree/src/: main.cpp  tree.cpp
userSrc/xuanxuan/include/: API.hpp  Motor.hpp  main.hpp
userSrc/xuanxuan/src/: Motor.cpp  main.cpp
userSrc/yangming/src/: main.cpp
userSrc/zhang/include/: a.hpp
userSrc/zhang/src/: main.cpp  motor.cpp
